KBE new corrections

--- a/about.html
+++ b/about.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CarServ - Car Repair HTML Template</title>
+    <title>A propos de nous</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
+    <meta name="robots" content="noindex, nofollow">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -31,6 +32,7 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="./img/KBE-Images/img14.png">
 </head>
 
 <body>
@@ -62,8 +64,8 @@
                 <a href="service.html" class="nav-item nav-link">Services</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Noter<i
-                    class="fa fa-arrow-right ms-3"></i></a>
+            <!--  <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Noter<i
+                    class="fa fa-arrow-right ms-3"></i></a> -->
         </div>
     </nav>
     <!-- Navbar End -->
