--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <meta charset="utf-8">
     <title>Kivu Best Engine</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
-
+    <meta content="Véhicule, engins, vente, moteurs, motor" name="keywords">
+    <meta content="Kivu Best Engine est votre partenaire de confiance pour l'achat de véhicules de
+                        marques reconnues telles que Toyota, Nissan, Foton et CHANGAN. Grâce à notre réseau
+                        international et à notre expertise de plus de 17 ans, nous mettons à votre disposition un large
+                        choix de véhicules fiables, à des prix compétitifs." name="description">
+    <meta name="robots" content="index, follow">
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <meta property="og:title" content="Kivu Best Engine">
+    <meta property="og:description" content="Kivu Best Engine est votre partenaire de confiance pour l'achat de véhicules de
+                        marques reconnues telles que Toyota, Nissan, Foton et CHANGAN. Grâce à notre réseau
+                        international et à notre expertise de plus de 17 ans, nous mettons à votre disposition un large
+                        choix de véhicules fiables, à des prix compétitifs.">
+    <meta property="og:image" content="https://www.kivubestengine.com/img/KBE-Images/img14.png">
+    <meta property="og:url" content="https://www.kivubestengine.com">
+    <meta property="og:type" content="website">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,6 +41,7 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="./img/KBE-Images/img14.png">
 </head>
 
 <body>
@@ -67,8 +78,8 @@
                 <a href="service.html" class="nav-item nav-link">Services</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Noter<i
-                    class="fa fa-arrow-right ms-3"></i></a>
+            <!--  <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Noter<i
+                    class="fa fa-arrow-right ms-3"></i></a> -->
         </div>
     </nav>
     <!-- Navbar End -->
@@ -320,7 +331,8 @@
                                     <div class="position-relative h-100">
                                         <a href="./img/KBE-Images/changan.webp"><img
                                                 class="position-absolute img-fluid w-100 h-100"
-                                                src="./img/KBE-Images/changan.webp" style="object-fit: cover;" alt=""></a>
+                                                src="./img/KBE-Images/changan.webp" style="object-fit: cover;"
+                                                alt=""></a>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -567,7 +579,7 @@
     </div> -->
     <!-- Team End -->
 
-    <!-- Testimonial Start -->
+    <!--  Testimonial Start 
     <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s" style="margin-top: -4em;">
         <div class="container">
             <div class="text-center">
@@ -617,8 +629,7 @@
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Testimonial End -->
+    </div> -->
 
 
     <!-- Footer Start -->
