--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CarServ - Car Repair HTML Template</title>
+    <title>Contacts</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
+    <meta name="robots" content="noindex, nofollow">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -31,6 +32,7 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="./img/KBE-Images/img14.png">
 </head>
 
 <body>
@@ -64,8 +66,8 @@
                 <a href="service.html" class="nav-item nav-link">Services</a>
                 <a href="contact.html" class="nav-item nav-link active">Contact</a>
             </div>
-            <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Noter<i
-                    class="fa fa-arrow-right ms-3"></i></a>
+            <!--   <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Noter<i
+                    class="fa fa-arrow-right ms-3"></i></a> -->
         </div>
     </nav>
     <!-- Navbar End -->
@@ -125,9 +127,10 @@
                 </div>
                 <div class="col-md-6 wow fadeIn" data-wow-delay="0.1s">
                     <iframe class="position-relative rounded w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63772.26889699382!2d28.8244919!3d-2.5038208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19dd09c8e65f0c3d%3A0x1b9b2281d1d67a5e!2sBukavu%2C%20Democratic%20Republic%20of%20the%20Congo!5e0!3m2!1sen!2sbd!4v1699999999999!5m2!1sen!2sbd"
                         frameborder="0" style="min-height: 350px; border:0;" allowfullscreen="" aria-hidden="false"
-                        tabindex="0"></iframe>
+                        tabindex="0">
+                    </iframe>
                 </div>
                 <div class="col-md-6">
                     <div class="wow fadeInUp" data-wow-delay="0.2s">
