--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                                     <h6 class="text-white text-uppercase mb-3 animated slideInDown"></h6>
                                     <h3 class="display-3 text-white mb-4 pb-3 animated slideInDown">Roulez vers la
                                         fiabilité</h3>
-                                    <a href="" class="btn btn-primary py-3 px-5 animated slideInDown">En savoir plus<i
-                                            class="fa fa-arrow-right ms-3"></i></a>
+                                    <a href="./about.html" class="btn btn-primary py-3 px-5 animated slideInDown">En
+                                        savoir plus<i class="fa fa-arrow-right ms-3"></i></a>
                                 </div>
                                 <div class="col-lg-5 d-none d-lg-flex animated zoomIn">
                                     <img class="img-fluid" src="./img/KBE-Images/changan-top.webp" alt="">
@@ -258,7 +258,7 @@
     </div>
     <!-- Service End -->
 
-    <!-- Fact Start -->
+    <!--  Fact Start 
     <div class="container-fluid fact bg-dark my-5 py-5">
         <div class="container">
             <div class="row g-4">
@@ -284,8 +284,7 @@
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Fact End -->
+    </div> Fact End -->
 
 
     <!-- Service Start -->
@@ -653,8 +652,6 @@
                     <h4 class="text-light mb-4">Opening Hours</h4>
                     <h6 class="text-light">Lundi - Vendredi:</h6>
                     <p class="mb-4">08.00 - 16.00</p>
-                    <h6 class="text-light">Samedi - Dimenche:</h6>
-                    <p class="mb-0">08.00 - 14.00</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Services</h4>
