--- a/service.html
+++ b/service.html
@@ -49,9 +49,9 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h4 class="m-0 text-primary"><!-- <i class="fa fa-car me-3"></i> --> <img src="./img/KBE-Images/img14.png"
-                    style="width: 60px;" alt=""> <span style="color: red;">Kivu</span> <span
-                    style="color:blue">Best</span>
+            <h4 class="m-0 text-primary" translate="no"><!-- <i class="fa fa-car me-3"></i> --> <img
+                    src="./img/KBE-Images/img14.png" style="width: 60px;" alt=""> <span style="color: red;">Kivu</span>
+                <span style="color:blue">Best</span>
                 <span style="color: green">Engine</span>
             </h4>
         </a>
@@ -306,7 +306,7 @@
 
 
     <!-- Testimonial Start -->
-    <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
+    <!-- <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container">
             <div class="text-center">
                 <h6 class="text-primary text-uppercase"></h6>
@@ -355,7 +355,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Testimonial End -->
 
 
@@ -404,13 +404,14 @@
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0" itemscope
                         itemtype="https://schema.org/Organization">
-                        &copy; <a class="border-bottom" href="./" itemprop="name">Kivu Best Engine</a>,
+                        &copy; <a class="border-bottom" href="./" itemprop="name" translate="no">Kivu Best Engine </a>,
                         Tout droit reservé.
                         <br>
                         Propulsé par
                         <a class="border-bottom" href="https://www.amtech-co.com" target="_blank" rel="sponsored"
                             itemprop="url">
-                            <span itemprop="name">Amtech Technology</span> (<span itemprop="alternateName">Amtech-co
+                            <span itemprop="name" translate="no">Amtech Technology</span> (<span
+                                itemprop="alternateName">Amtech-co
                                 LLC</span>)
                         </a>
 
@@ -432,6 +433,124 @@
                 </div>
             </div>
         </div>
+
+        <!-- Custom dropdown -->
+        <select id="custom-language-selector"
+            style="outline: none;border:none;padding:0.3em;display:flex;justify-content:center;margin:auto;">
+            <option value="">Select Language</option>
+            <option value="en" translate="no">English</option>
+            <option value="fr" translate="no">Français</option>
+            <option value="es" translate="no">Español</option>
+        </select><br>
+
+        <!-- Hidden Google Translate container -->
+        <div id="google_translate_element" style="display:none;"></div>
+
+        <script type="text/javascript">
+            // Hide page initially
+            document.documentElement.style.visibility = 'hidden';
+
+            // Initialize Google Translate
+            function googleTranslateElementInit() {
+                new google.translate.TranslateElement({ pageLanguage: 'fr' }, 'google_translate_element');
+            }
+
+            // Save language preference
+            function saveLanguage(lang) {
+                localStorage.setItem('preferredLanguage', lang);
+            }
+
+            // Apply chosen language
+            function translateLanguage(lang) {
+                const select = document.querySelector("select.goog-te-combo");
+                if (select) {
+                    select.value = lang;
+                    select.dispatchEvent(new Event("change"));
+                    saveLanguage(lang);
+                }
+            }
+
+            // Wait for translation to complete
+            function waitForTranslation(lang) {
+                const interval = setInterval(() => {
+                    const select = document.querySelector("select.goog-te-combo");
+                    if (select && select.value === lang) {
+                        clearInterval(interval);
+                        document.documentElement.style.visibility = 'visible'; // Show page
+                    }
+                }, 100);
+            }
+
+            // Custom dropdown event
+            document.getElementById("custom-language-selector").addEventListener("change", function () {
+                const lang = this.value;
+                if (lang) translateLanguage(lang);
+            });
+
+            // Apply saved language on load
+            document.addEventListener("DOMContentLoaded", () => {
+                const savedLang = localStorage.getItem('preferredLanguage');
+                if (savedLang) {
+                    const tryTranslate = () => {
+                        translateLanguage(savedLang);
+                        document.getElementById("custom-language-selector").value = savedLang;
+                        waitForTranslation(savedLang);
+                    };
+
+                    // Retry in case Google Translate combo is not yet loaded
+                    let retries = 0;
+                    const retryInterval = setInterval(() => {
+                        const combo = document.querySelector("select.goog-te-combo");
+                        if (combo || retries > 20) {
+                            clearInterval(retryInterval);
+                            tryTranslate();
+                        }
+                        retries++;
+                    }, 200);
+                } else {
+                    document.documentElement.style.visibility = 'visible';
+                }
+
+                // Observe DOM for Google Translate banners and remove them
+                const observer = new MutationObserver((mutations) => {
+                    mutations.forEach((mutation) => {
+                        mutation.addedNodes.forEach((node) => {
+                            if (node.id === 'goog-gt-tt' || node.className === 'skiptranslate') {
+                                node.style.display = 'none';
+                            }
+                            if (node.tagName === 'IFRAME' && node.src.includes('translate.google.com')) {
+                                node.remove();
+                            }
+                        });
+                    });
+                });
+
+                observer.observe(document.body, { childList: true, subtree: true });
+            });
+
+            // Async load Google Translate script
+            (function () {
+                const gtScript = document.createElement('script');
+                gtScript.src = "//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit";
+                gtScript.async = true;
+                document.head.appendChild(gtScript);
+            })();
+        </script>
+
+        <style>
+            /* Safety CSS to hide leftover elements */
+            .skiptranslate,
+            #goog-gt-tt,
+            iframe.goog-te-banner-frame {
+                display: none !important;
+            }
+
+            body {
+                top: 0px !important;
+            }
+        </style>
+
+
     </div>
     <!-- Footer End -->
 
